--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="icon" href="favicon.ico">
 </head>
 
-<body background="C:\Users\VIGNESHWARAN\Documents\cv\images\Website-background.jpg">
+<body background="images\Website-background.jpg">
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\VIGNESHWARAN\Documents\cv\images\PHOTO.png" alt="Vignesh Image" width="200" height="200"></td>
+      <td><img src="C:images\PHOTO.png" alt="Vignesh Image" width="200" height="200"></td>
       <td>
         <p> <strong><em>Name:Vigneshwaran M <br>
               DOB:30/09/2000 <br>
